# kk-karaoke

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.cuda  README.md  local_run.sh  nginx.conf  run.sh
backend/: .env.example  README.md  app.py  demo.py  launcher.py  launcher.spec  main.py  output.json  output.lrc  pyproject.toml  redis.conf  requirements.txt  test.py  utils.py
backend/interfaces/: jam.py  queue.py
backend/managers/: db.py  redis.py  setup_redis.py  storage.py  websocket.py
backend/managers/_test/: test_db_connection.py
backend/middlewares/: format.py
backend/models/: jam.py  song.py  track.py  user.py
backend/routes/: db_interface.py  lyrics.py  queue.py  room.py  song.py  track.py  upload.py
backend/scripts/: process_default_queue.py  process_lyrics.py
backend/services/: downloader.py  jam.py  pitcher.py  process_request.py  spotify.py  voice_remover.py  websocket.py
backend/services/demucs/: apply.py
backend/storage/lyrics/: 0btLaqWlXsOWLcpjE1jmIk.lrc  18nZWRpJIHzgb1SQr4ncwb.lrc  39gaUtq2z4ejJbno7tWHbL.lrc  406IpEtZPvbxApWTGM3twY.lrc  49oOgXKqm6xTavBtekzVHg.lrc  7eb3ee16-e6dc-4f2e-ad2c-d1ba75408f13.lrc  test.lrc
frontend/: .env.example  electron.js  icon.icns  index.html  package.json  tsconfig.json  vite.config.mts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  shiftedPlayer.ts  syncedPlayer.ts
frontend/src/apis/: player.ts
frontend/src/components/: AudioController.tsx  Carousel.tsx  Jam.tsx  LyricsEditor.tsx  Menu.tsx  Midi.tsx  MobielAudioController.tsx  MobileAudioController.tsx  MobileLyrics.tsx  MobilePlayer.tsx  Nav.tsx  Navigation.tsx  NonLinearSlider.tsx  Player.tsx  Queue.tsx  ResizeHandle.tsx  Resizer.tsx  Scrollbar.tsx  SearchBox.tsx  Select.tsx  SidebarController.tsx  Slider.tsx  Snackbar.tsx  SongCard.tsx  SvgIcon.tsx  Switch.tsx  TrackQueue.tsx  nav.tsx
frontend/src/components/LyricsEditor/: Player.tsx  SlateEditor.tsx
frontend/src/components/const/: header.ts
frontend/src/components/playlist/: ActionMenu.tsx  Row.tsx  Table.tsx
frontend/src/context/: playlist.tsx
frontend/src/hooks/: audio.tsx  audioControl.ts  audioControll.ts  debounce.ts  history.ts  player.tsx  queue.ts  ws.ts
frontend/src/layouts/: Layout.tsx
frontend/src/models/: spotify.ts
frontend/src/pages/: browse.tsx  index.tsx  join.tsx  lyrics-edit.tsx  lyrics.tsx  mobile-lyrics.tsx  play.tsx  playlist.tsx  queue.tsx  search.tsx  setting.tsx  singing.tsx
frontend/src/soundtouch/: PitchShifter.js
frontend/src/store/: audio.ts  index.ts  notify.ts  player.ts  playlist.ts  room.ts  setting.ts  theme.ts  track.ts  ws.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: editor.d.ts  env.d.ts  song.d.ts  theme.d.ts
frontend/src/utils/: api.ts  index.ts
