[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "av==14.3.0",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "boto3>=1.38.19",
    "celery==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "ctranslate2==4.6.0",
    "cutlet==0.5.0",
    "demucs==4.0.1",
    "deprecated==1.2.18",
    "dora-search==0.1.12",
    "dotenv>=0.9.9",
    "einops==0.8.1",
    "fastapi==0.115.12",
    "faster-whisper==1.1.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fsspec==2025.3.2",
    "fugashi==1.4.0",
    "h11==0.16.0",
    "hangul-romanize==0.1.0",
    "hiredis==3.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.31.2",
    "humanfriendly==10.0",
    "idna==3.10",
    "jaconv==0.4.0",
    "jinja2==3.1.6",
    "julius==0.2.7",
    "kombu==5.5.3",
    "lameenc==1.8.1",
    "langdetect==1.0.9",
    "lingua-language-detector>=2.1.0",
    "markupsafe==3.0.2",
    "mecab-python3==1.0.10",
    "mojimoji==0.0.13",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "omegaconf==2.3.0",
    "onnxruntime==1.22.0",
    "opencc-python-reimplemented==0.1.7",
    "openunmix==1.3.0",
    "packaging==25.0",
    "pip==25.0.1",
    "platformdirs>=4.3.8",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pyinstaller>=6.13.0",
    "pyjwt==2.9.0",
    "pykakasi==2.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rapidfuzz==3.13.0",
    "redis[hiredis]==5.3.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "retrying==1.3.4",
    "safetensors==0.5.3",
    "setuptools==80.3.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.46.2",
    "submitit==1.5.2",
    "sympy==1.14.0",
    "syncedlyrics==1.0.1",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "treetable==0.2.5",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "unidic-lite==1.0.8",
    "urllib3==2.4.0",
    "uvicorn[standard]==0.34.2",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yt-dlp==2025.4.30",
]
